course_contents/practice_labsII/busybox-pd.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - image: busybox
    name: busybox
    resources: {}
    command: ["/bin/sh", "-c", "printenv"]
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
          - All
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
