course_contents/practice_labsII/octopus-template.yaml
apiVersion: template.openshift.io/v1
kind: Template
labels:
  app: octopus-app
metadata:
  name: octopus-template
objects:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
    name: octopus-service
  spec:
    ports:
    - name: octopus-service
      port: 80
      targetPort: 8080
    selector:
      app: octopus-app
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: octopus-app
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: octopus-app
    template:
      metadata:
        labels:
          app: octopus-app 
      spec:
        containers:
        - image: bitnami/nginx
          name: octopus-app
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 200m
