course_contents/practice_labsII/plum_deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"nginx-autoscale:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"nginx-autoscale\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: nginx-autoscale
      app.kubernetes.io/component: nginx-autoscale
      app.kubernetes.io/instance: nginx-autoscale
    name: nginx-autoscale
  spec:
    replicas: 4
    selector:
      matchLabels:
        deployment: nginx-autoscale
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: nginx-autoscale
      spec:
        containers:
        - image: ' '
          name: nginx-autoscale
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: nginx-autoscale
      app.kubernetes.io/component: nginx-autoscale
      app.kubernetes.io/instance: nginx-autoscale
    name: nginx-autoscale
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deployment: nginx-autoscale
  status:
    loadBalancer: {}
kind: List
metadata: {}
